css: fixed text align to justify

--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ html {
     width: 80vw;
     display: flex;
     justify-content: center;
-    text-align: center;
-    font-size: 1rem;
+    text-align: justify;
+    font-size: 1.2rem;
     color: white;
 }
 
